test/expected/pipe_empty_stage.out
[CompoundList]
  [CompoundListCondition, None]
    [Pipeline]
      [SimpleCommand]
      [SimpleCommand "cat"]
[Word
  Unquoted "x=1"
]
[Word
  Unquoted "cat"
]
shit: 2:1: error: A pipeline stage expanded to no command to run.
     2 |  x=1 | cat
       |  ^~~ here.
